--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -1050,7 +1050,7 @@
         "id": "g_0Gyi3E0HLW"
       },
       "source": [
-        "# Optional: Super-Slomo for smoothing movement"
+        "# Optional: Super-Slomo for smoothing movement (WIP)"
       ]
     },
     {
@@ -1059,19 +1059,19 @@
         "id": "cRbalqeLvy3y"
       },
       "source": [
-        "!git clone -q --depth 1 https://github.com/avinashpaliwal/Super-SloMo.git\n",
+        "# !git clone -q --depth 1 https://github.com/avinashpaliwal/Super-SloMo.git\n",
         "\n",
-        "def download_from_google_drive(file_id, file_name):\n",
-        "  # download a file from the Google Drive link\n",
-        "  !rm -f ./cookie\n",
-        "  !curl -c ./cookie -s -L \"https://drive.google.com/uc?export=download&id={file_id}\" > /dev/null\n",
-        "  confirm_text = !awk '/download/ {print $NF}' ./cookie\n",
-        "  confirm_text = confirm_text[0]\n",
-        "  !curl -Lb ./cookie \"https://drive.google.com/uc?export=download&confirm={confirm_text}&id={file_id}\" -o {file_name}\n",
+        "# def download_from_google_drive(file_id, file_name):\n",
+        "#   # download a file from the Google Drive link\n",
+        "#   !rm -f ./cookie\n",
+        "#   !curl -c ./cookie -s -L \"https://drive.google.com/uc?export=download&id={file_id}\" > /dev/null\n",
+        "#   confirm_text = !awk '/download/ {print $NF}' ./cookie\n",
+        "#   confirm_text = confirm_text[0]\n",
+        "#   !curl -Lb ./cookie \"https://drive.google.com/uc?export=download&confirm={confirm_text}&id={file_id}\" -o {file_name}\n",
         "  \n",
-        "pretrained_model = 'SuperSloMo.ckpt'\n",
-        "if not exists(pretrained_model):\n",
-        "  download_from_google_drive('1IvobLDbRiBgZr3ryCRrWL8xDbMZ-KnpF', pretrained_model)"
+        "# pretrained_model = 'SuperSloMo.ckpt'\n",
+        "# if not exists(pretrained_model):\n",
+        "#   download_from_google_drive('1IvobLDbRiBgZr3ryCRrWL8xDbMZ-KnpF', pretrained_model)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1082,10 +1082,10 @@
         "id": "2hT5Lhgs0gwe"
       },
       "source": [
-        "SLOW_MOTION_FACTOR = 3#@param {type:\"number\"}\n",
-        "TARGET_FPS = 12#@param {type:\"number\"}\n",
-        "slomo_filepath = filepath[:-4] + '-slomo'\n",
-        "!cd Super-SloMo && python video_to_slomo.py --ffmpeg {ffmpeg_path} --checkpoint ../{pretrained_model} --video {filepath} --sf {SLOW_MOTION_FACTOR} --fps {TARGET_FPS} --output {slomo_filepath + '.mkv'} && ffmpeg -i {slomo_filepath + '.mkv'} {slomo_filepath + '.mp4'}"
+        "# SLOW_MOTION_FACTOR = 3#@param {type:\"number\"}\n",
+        "# TARGET_FPS = 12#@param {type:\"number\"}\n",
+        "# slomo_filepath = filepath[:-4] + '-slomo'\n",
+        "# !cd Super-SloMo && python video_to_slomo.py --ffmpeg {ffmpeg_path} --checkpoint ../{pretrained_model} --video {filepath} --sf {SLOW_MOTION_FACTOR} --fps {TARGET_FPS} --output {slomo_filepath + '.mkv'} && ffmpeg -i {slomo_filepath + '.mkv'} {slomo_filepath + '.mp4'}"
       ],
       "execution_count": null,
       "outputs": []
