--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -953,6 +953,9 @@
       "source": [
         "# @title Increase Resolution\n",
         "\n",
+        "# Set zoomed = True if this cell is run\n",
+        "zoomed = True\n",
+        "\n",
         "init_frame = 1#@param {type:\"number\"}\n",
         "last_frame = i#@param {type:\"number\"}\n",
         "\n",
@@ -983,25 +986,20 @@
       "source": [
         "# @title Create video\n",
         "\n",
-        "init_frame = 1#@param {type:\"number\"} This is the frame where the video will start\n",
-        "last_frame = i#@param {type:\"number\"} You can change i to the number of the last frame you want to generate. It will raise an error if that number of frames does not exist.\n",
+        "init_frame = 10#@param {type:\"number\"} This is the frame where the video will start\n",
+        "last_frame = 50#@param {type:\"number\"} You can change i to the number of the last frame you want to generate. It will raise an error if that number of frames does not exist.\n",
         "fps = 12#@param {type:\"number\"}\n",
         "\n",
         "frames = []\n",
         "tqdm.write('Generating video...')\n",
-        "for i in range(init_frame,last_frame): #\n",
-        "    filename = f\"{working_dir}/steps/{i:04}.png\"\n",
-        "    frames.append(Image.open(filename))\n",
+        "try:\n",
+        "    zoomed\n",
+        "except NameError:\n",
+        "    image_path = 'steps/%04d.png'\n",
+        "else:\n",
+        "    image_path = 'steps/zoomed_%04d.png'\n",
         "\n",
-        "from subprocess import Popen, PIPE\n",
-        "p = Popen(\n",
-        "    ['ffmpeg', '-y', '-f', 'image2pipe', '-vcodec', 'png', '-r', str(fps), '-i',\n",
-        "     '-', '-vcodec', 'libx264', '-r', str(fps), '-pix_fmt', 'yuv420p', '-crf', \n",
-        "     '17', '-preset', 'veryslow', filepath],\n",
-        "    stdin=PIPE)\n",
-        "for im in tqdm(frames):\n",
-        "    im.save(p.stdin, 'PNG')\n",
-        "p.stdin.close()\n",
+        "!ffmpeg -y -vcodec png -r 12 -start_number {init_frame} -i {image_path} -c:v libx264 -vf fps={fps} -pix_fmt yuv420p -crf 17 -preset veryslow {filepath}\n",
         "\n",
         "print(\"The video is now being compressed, wait...\")\n",
         "p.wait()\n",
