--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -102,7 +102,7 @@
         "id": "fsubmNPc-pD0"
       },
       "source": [
-        "working_dir = '/content'"
+        "# working_dir = '/content'"
       ],
       "execution_count": null,
       "outputs": []
@@ -505,17 +505,17 @@
       "source": [
         "#@title Parameters\n",
         "key_frames = True #@param {type:\"boolean\"}\n",
-        "text_prompts = \"0:(Winter: 1| Trending on Artstation: 1), 10:(Winter: 1| Spring: 0), 20: (Winter: 0| Spring: 1| Summer: 0), 30: (Spring: 0| Summer: 1|Autumn: 0), 40: (Summer: 0| Autumn: 1| Winter: 0), 50: (Autumn: 0| Winter: 1)\" #@param {type:\"string\"}\n",
-        "width =  450#@param {type:\"number\"}\n",
+        "text_prompts = \"0:(First Circle of Hell, Limbo: 1| Trending on Artstation; oil painting: 1), 30:(First Circle of Hell, Limbo: 1| Second Circle of Hell, Lust: 0), 60: (First Circle of Hell, Limbo: 0| Second Circle of Hell, Lust: 1| Third Circle of Hell, Gluttony: 0), 90: (Second Circle of Hell, Lust: 0| Third Circle of Hell, Gluttony: 1|Fourth Circle of Hell, Greed: 0), 120: (Third Circle of Hell, Gluttony: 0| Fourth Circle of Hell, Greed: 1| Fifth Circle of Hell, Anger: 0), 150: (Fourth Circle of Hell, Greed: 0| Fifth Circle of Hell, Anger: 1|Sixth Circle of Hell, Heresy:0), 180: (Fifth Circle of Hell, Anger: 0| Sixth Circle of Hell, Heresy: 1| Seventh Circle of Hell, Violence: 0), 210: (Sixth Circle of Hell, Heresy: 0| Seventh Circle of Hell, Violence: 1| Eighth Circle of Hell, Fraud: 0), 240: (Seventh Circle of Hell, Violence: 0| Eighth Circle of Hell, Fraud: 1| Ninth Circle of Hell, Treachery: 0), 270: (Eighth Circle of Hell, Fraud: 0| Ninth Circle of Hell, Treachery: 1| Inferno: 0), 300: (Ninth Circle of Hell, Treachery: 0 | Inferno: 1)\" #@param {type:\"string\"}\n",
+        "width =  800#@param {type:\"number\"}\n",
         "height =  450#@param {type:\"number\"}\n",
         "model = \"vqgan_imagenet_f16_16384\" #@param [\"vqgan_imagenet_f16_16384\", \"vqgan_imagenet_f16_1024\", \"wikiart_1024\", \"wikiart_16384\", \"coco\", \"faceshq\", \"sflckr\"]\n",
-        "interval =  1#@param {type:\"number\"}\n",
+        "interval =  10#@param {type:\"number\"}\n",
         "initial_image = \"\"#@param {type:\"string\"}\n",
         "target_images = \"\"#@param {type:\"string\"}\n",
         "seed = 1#@param {type:\"number\"}\n",
-        "max_frames = 50#@param {type:\"number\"}\n",
+        "max_frames = 350#@param {type:\"number\"}\n",
         "angle = \"0:(0)\"#@param {type:\"string\"}\n",
-        "zoom = \"0:(1.2)\"#@param {type:\"string\"}\n",
+        "zoom = \"0:(1.1)\"#@param {type:\"string\"}\n",
         "translation_x = \"0:(-4)\"#@param {type:\"string\"}\n",
         "translation_y = \"0:(-6)\"#@param {type:\"string\"}\n",
         "iterations_per_frame = \"0:(10)\"#@param {type:\"string\"}\n",
@@ -636,17 +636,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mphNFnNDBDnM"
-      },
-      "source": [
-        "text_prompts_series"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "TV_lYFXeAulw"
@@ -674,7 +663,11 @@
         "id": "-qAWbJ-_ctkl"
       },
       "source": [
-        "filename = f\"{'_'.join(text_prompts).replace(' ', '')}.mp4\"\n",
+        "if key_frames:\n",
+        "    # key frame filename would be too long\n",
+        "    filename = \"video.mp4\"\n",
+        "else:\n",
+        "    filename = f\"{'_'.join(text_prompts).replace(' ', '')}.mp4\"\n",
         "filepath = f'{working_dir}/{filename}'"
       ],
       "execution_count": null,
@@ -957,9 +950,8 @@
         "zoomed = True\n",
         "\n",
         "init_frame = 1#@param {type:\"number\"}\n",
-        "last_frame = i#@param {type:\"number\"}\n",
+        "last_frame = 350#@param {type:\"number\"}\n",
         "\n",
-        "!mkdir {working_dir}/srcnn\n",
         "for i in range(init_frame,last_frame): #\n",
         "    filename = f\"{i:04}.png\"\n",
         "    !cd {working_dir}/steps && python /content/SRCNN/run.py --zoom_factor 2 --model /content/model_2x.pth --image {filename} --cuda"
@@ -987,22 +979,21 @@
         "# @title Create video\n",
         "\n",
         "init_frame = 10#@param {type:\"number\"} This is the frame where the video will start\n",
-        "last_frame = 50#@param {type:\"number\"} You can change i to the number of the last frame you want to generate. It will raise an error if that number of frames does not exist.\n",
+        "last_frame = 350#@param {type:\"number\"} You can change i to the number of the last frame you want to generate. It will raise an error if that number of frames does not exist.\n",
         "fps = 12#@param {type:\"number\"}\n",
         "\n",
         "frames = []\n",
-        "tqdm.write('Generating video...')\n",
+        "# tqdm.write('Generating video...')\n",
         "try:\n",
         "    zoomed\n",
         "except NameError:\n",
-        "    image_path = 'steps/%04d.png'\n",
+        "    image_path = f'{working_dir}/steps/%04d.png'\n",
         "else:\n",
-        "    image_path = 'steps/zoomed_%04d.png'\n",
+        "    image_path = f'{working_dir}/steps/zoomed_%04d.png'\n",
         "\n",
-        "!ffmpeg -y -vcodec png -r 12 -start_number {init_frame} -i {image_path} -c:v libx264 -vf fps={fps} -pix_fmt yuv420p -crf 17 -preset veryslow {filepath}\n",
+        "!ffmpeg -y -vcodec png -r {fps} -start_number {init_frame} -i {image_path} -c:v libx265 -vf fps={fps} -pix_fmt yuv420p -crf 17 -preset veryslow {filepath}\n",
         "\n",
-        "print(\"The video is now being compressed, wait...\")\n",
-        "p.wait()\n",
+        "# print(\"The video is now being compressed, wait...\")\n",
         "print(\"The video is ready\")"
       ],
       "execution_count": null,
@@ -1048,7 +1039,7 @@
         "id": "g_0Gyi3E0HLW"
       },
       "source": [
-        "# Optional: Super-Slomo for smoothing movement (WIP)"
+        "# Optional: Super-Slomo for smoothing movement (Currently broken out of the box, you can get it to work, but you have to fiddle a little with the code)"
       ]
     },
     {
@@ -1058,7 +1049,7 @@
       },
       "source": [
         "# !git clone -q --depth 1 https://github.com/avinashpaliwal/Super-SloMo.git\n",
-        "\n",
+        "# from os.path import exists\n",
         "# def download_from_google_drive(file_id, file_name):\n",
         "#   # download a file from the Google Drive link\n",
         "#   !rm -f ./cookie\n",
@@ -1082,8 +1073,9 @@
       "source": [
         "# SLOW_MOTION_FACTOR = 3#@param {type:\"number\"}\n",
         "# TARGET_FPS = 12#@param {type:\"number\"}\n",
-        "# slomo_filepath = filepath[:-4] + '-slomo'\n",
-        "# !cd Super-SloMo && python video_to_slomo.py --ffmpeg {ffmpeg_path} --checkpoint ../{pretrained_model} --video {filepath} --sf {SLOW_MOTION_FACTOR} --fps {TARGET_FPS} --output {slomo_filepath + '.mkv'} && ffmpeg -i {slomo_filepath + '.mkv'} {slomo_filepath + '.mp4'}"
+        "# slomo_filepath_mkv = filepath[:-4] + '-slomo.mkv'\n",
+        "# slomo_filepath_mp4 = filepath[:-4] + '-slomo.mp4'\n",
+        "# !cd Super-SloMo && python video_to_slomo.py --ffmpeg {ffmpeg_path} --checkpoint ../{pretrained_model} --video {filepath} --sf 3 --fps 12 --output {slomo_filepath_mkv} && ffmpeg -i {slomo_filepath_mkv} {slomo_filepath_mp4}"
       ],
       "execution_count": null,
       "outputs": []
