--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -38,7 +38,8 @@
       "source": [
         "# Generate images from text phrases with VQGAN and CLIP (z + quantize method) (experimental zoom)\n",
         "\n",
-        "Notebook by Katherine Crowson (https://github.com/crowsonkb, https://twitter.com/RiversHaveWings). The original BigGAN + CLIP method was made by https://twitter.com/advadnoun. Translated into Spanish and added explanations, and modifications by Eleiber#8347, and the friendly interface was made thanks to Abulafia#3734. Translated back into English, and zoom feature by Chigozie Nri (https://github.com/chigozienri)\n",
+        "Notebook by Katherine Crowson (https://github.com/crowsonkb, https://twitter.com/RiversHaveWings). The original BigGAN + CLIP method was made by https://twitter.com/advadnoun. Translated into Spanish and added explanations, and modifications by Eleiber#8347, and the friendly interface was made thanks to Abulafia#3734. Translated back into English, and zoom, pan, rotation, and keyframes features by Chigozie Nri (https://github.com/chigozienri, https://twitter.com/chigozienri)\n",
+        "If you encounter problems using it, you are welcome to ask me to fix it at https://twitter.com/chigozienri\n",
         "\n",
         "For a detailed tutorial on how to use it, I recommend [visiting this article (in Spanish)](https://tuscriaturas.miraheze.org/wiki/Ayuda:Crear_imágenes_con_VQGAN+CLIP), made by Jakeukalane#2767 and Avengium (Ángel)#3715\n"
       ]
