--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -36,7 +36,7 @@
         "id": "CppIQlPhhwhs"
       },
       "source": [
-        "# Generate images from text phrases with VQGAN and CLIP (z + quantize method) (experimental zoom)\n",
+        "# Generate images from text phrases with VQGAN and CLIP (z + quantize method), with animation and keyframes\n",
         "\n",
         "Notebook by Katherine Crowson (https://github.com/crowsonkb, https://twitter.com/RiversHaveWings). The original BigGAN + CLIP method was made by https://twitter.com/advadnoun. Translated into Spanish and added explanations, and modifications by Eleiber#8347, and the friendly interface was made thanks to Abulafia#3734. Translated back into English, and zoom, pan, rotation, and keyframes features by Chigozie Nri (https://github.com/chigozienri, https://twitter.com/chigozienri)\n",
         "If you encounter problems using it, you are welcome to ask me to fix it at https://twitter.com/chigozienri\n",
@@ -154,7 +154,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wSfISAhyPmyp"
+        "id": "wSfISAhyPmyp",
+        "cellView": "form"
       },
       "source": [
         "# @title Library installation\n",
@@ -231,7 +232,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EXMSuW2EQWsd"
+        "id": "EXMSuW2EQWsd",
+        "cellView": "form"
       },
       "source": [
         "# @title Loading of libraries and definitions\n",
@@ -501,7 +503,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZdlpRFL8UAlW"
+        "id": "ZdlpRFL8UAlW",
+        "cellView": "form"
       },
       "source": [
         "#@title Parameters\n",
@@ -677,7 +680,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g7EDme5RYCrt"
+        "id": "g7EDme5RYCrt",
+        "cellView": "form"
       },
       "source": [
         "#@title Actually do the run...\n",
