--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -246,6 +246,7 @@
         "import cv2\n",
         "import pandas as pd\n",
         "import numpy as np\n",
+        "import subprocess\n",
         " \n",
         "sys.path.append('./taming-transformers')\n",
         "from IPython import display\n",
@@ -509,7 +510,7 @@
       "source": [
         "#@title Parameters\n",
         "key_frames = True #@param {type:\"boolean\"}\n",
-        "text_prompts = \"0:(First Circle of Hell, Limbo: 1| Trending on Artstation; oil painting: 1), 30:(First Circle of Hell, Limbo: 1| Second Circle of Hell, Lust: 0), 60: (First Circle of Hell, Limbo: 0| Second Circle of Hell, Lust: 1| Third Circle of Hell, Gluttony: 0), 90: (Second Circle of Hell, Lust: 0| Third Circle of Hell, Gluttony: 1|Fourth Circle of Hell, Greed: 0), 120: (Third Circle of Hell, Gluttony: 0| Fourth Circle of Hell, Greed: 1| Fifth Circle of Hell, Anger: 0), 150: (Fourth Circle of Hell, Greed: 0| Fifth Circle of Hell, Anger: 1|Sixth Circle of Hell, Heresy:0), 180: (Fifth Circle of Hell, Anger: 0| Sixth Circle of Hell, Heresy: 1| Seventh Circle of Hell, Violence: 0), 210: (Sixth Circle of Hell, Heresy: 0| Seventh Circle of Hell, Violence: 1| Eighth Circle of Hell, Fraud: 0), 240: (Seventh Circle of Hell, Violence: 0| Eighth Circle of Hell, Fraud: 1| Ninth Circle of Hell, Treachery: 0), 270: (Eighth Circle of Hell, Fraud: 0| Ninth Circle of Hell, Treachery: 1| Inferno: 0), 300: (Ninth Circle of Hell, Treachery: 0 | Inferno: 1)\" #@param {type:\"string\"}\n",
+        "text_prompts = \"10:(Apple: 1| Orange: 0), 20: (Apple: 0| Orange: 1| Peach: 1)\" #@param {type:\"string\"}\n",
         "width =  800#@param {type:\"number\"}\n",
         "height =  450#@param {type:\"number\"}\n",
         "model = \"vqgan_imagenet_f16_16384\" #@param [\"vqgan_imagenet_f16_16384\", \"vqgan_imagenet_f16_1024\", \"wikiart_1024\", \"wikiart_16384\", \"coco\", \"faceshq\", \"sflckr\"]\n",
@@ -957,9 +958,21 @@
         "init_frame = 1#@param {type:\"number\"}\n",
         "last_frame = 350#@param {type:\"number\"}\n",
         "\n",
-        "for i in range(init_frame,last_frame): #\n",
+        "for i in range(init_frame, last_frame): #\n",
         "    filename = f\"{i:04}.png\"\n",
-        "    !cd {working_dir}/steps && python /content/SRCNN/run.py --zoom_factor 2 --model /content/model_2x.pth --image {filename} --cuda"
+        "    cmd = [\n",
+        "        'python',\n",
+        "        '/content/SRCNN/run.py',\n",
+        "        '--zoom_factor',\n",
+        "        '2',  # Note if you increase this, you also need to change the model.\n",
+        "        '--model',\n",
+        "        '/content/model_2x.pth',  # 2x, 3x and 4x are available from the repo above\n",
+        "        '--image',\n",
+        "        filename,\n",
+        "        '--cuda'\n",
+        "    ]\n",
+        "\n",
+        "    subprocess.run(cmd, cwd=f'{working_dir}/steps/')"
       ],
       "execution_count": null,
       "outputs": []
@@ -996,7 +1009,32 @@
         "else:\n",
         "    image_path = f'{working_dir}/steps/zoomed_%04d.png'\n",
         "\n",
-        "!ffmpeg -y -vcodec png -r {fps} -start_number {init_frame} -i {image_path} -c:v libx265 -vf fps={fps} -pix_fmt yuv420p -crf 17 -preset veryslow {filepath}\n",
+        "cmd = [\n",
+        "    'ffmpeg',\n",
+        "    '-y',\n",
+        "    '-vcodec',\n",
+        "    'png',\n",
+        "    '-r',\n",
+        "    fps,\n",
+        "    '-start_number',\n",
+        "    init_frame,\n",
+        "    '-i',\n",
+        "    image_path,\n",
+        "    '-c:v',\n",
+        "    libx264,\n",
+        "    '-vf',\n",
+        "    f'fps={fps}',\n",
+        "    '-pix_fmt',\n",
+        "    'yuv420p',\n",
+        "    '-crf',\n",
+        "    '17',\n",
+        "    '-preset',\n",
+        "    'veryslow',\n",
+        "    filepath\n",
+        "]\n",
+        "\n",
+        "subprocess.run(cmd)\n",
+        "\n",
         "\n",
         "# print(\"The video is now being compressed, wait...\")\n",
         "print(\"The video is ready\")"
@@ -1053,19 +1091,19 @@
         "id": "cRbalqeLvy3y"
       },
       "source": [
-        "# !git clone -q --depth 1 https://github.com/avinashpaliwal/Super-SloMo.git\n",
-        "# from os.path import exists\n",
-        "# def download_from_google_drive(file_id, file_name):\n",
-        "#   # download a file from the Google Drive link\n",
-        "#   !rm -f ./cookie\n",
-        "#   !curl -c ./cookie -s -L \"https://drive.google.com/uc?export=download&id={file_id}\" > /dev/null\n",
-        "#   confirm_text = !awk '/download/ {print $NF}' ./cookie\n",
-        "#   confirm_text = confirm_text[0]\n",
-        "#   !curl -Lb ./cookie \"https://drive.google.com/uc?export=download&confirm={confirm_text}&id={file_id}\" -o {file_name}\n",
+        "!git clone -q --depth 1 https://github.com/avinashpaliwal/Super-SloMo.git\n",
+        "from os.path import exists\n",
+        "def download_from_google_drive(file_id, file_name):\n",
+        "  # download a file from the Google Drive link\n",
+        "  !rm -f ./cookie\n",
+        "  !curl -c ./cookie -s -L \"https://drive.google.com/uc?export=download&id={file_id}\" > /dev/null\n",
+        "  confirm_text = !awk '/download/ {print $NF}' ./cookie\n",
+        "  confirm_text = confirm_text[0]\n",
+        "  !curl -Lb ./cookie \"https://drive.google.com/uc?export=download&confirm={confirm_text}&id={file_id}\" -o {file_name}\n",
         "  \n",
-        "# pretrained_model = 'SuperSloMo.ckpt'\n",
-        "# if not exists(pretrained_model):\n",
-        "#   download_from_google_drive('1IvobLDbRiBgZr3ryCRrWL8xDbMZ-KnpF', pretrained_model)"
+        "pretrained_model = 'SuperSloMo.ckpt'\n",
+        "if not exists(pretrained_model):\n",
+        "  download_from_google_drive('1IvobLDbRiBgZr3ryCRrWL8xDbMZ-KnpF', pretrained_model)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1076,11 +1114,33 @@
         "id": "2hT5Lhgs0gwe"
       },
       "source": [
-        "# SLOW_MOTION_FACTOR = 3#@param {type:\"number\"}\n",
-        "# TARGET_FPS = 12#@param {type:\"number\"}\n",
-        "# slomo_filepath_mkv = filepath[:-4] + '-slomo.mkv'\n",
-        "# slomo_filepath_mp4 = filepath[:-4] + '-slomo.mp4'\n",
-        "# !cd Super-SloMo && python video_to_slomo.py --ffmpeg {ffmpeg_path} --checkpoint ../{pretrained_model} --video {filepath} --sf 3 --fps 12 --output {slomo_filepath_mkv} && ffmpeg -i {slomo_filepath_mkv} {slomo_filepath_mp4}"
+        "SLOW_MOTION_FACTOR = 3#@param {type:\"number\"}\n",
+        "TARGET_FPS = 12#@param {type:\"number\"}\n",
+        "\n",
+        "cmd1 = [\n",
+        "    'python',\n",
+        "    'Super-SloMo/video_to_slomo.py',\n",
+        "    '--checkpoint',\n",
+        "    pretrained_model,\n",
+        "    '--video',\n",
+        "    filepath,\n",
+        "    '--sf',\n",
+        "    SLOW_MOTION_FACTOR,\n",
+        "    '--fps',\n",
+        "    TARGET_FPS,\n",
+        "    '--output',\n",
+        "    f'{filepath}-slomo.mkv',\n",
+        "]\n",
+        "\n",
+        "cmd2 = [\n",
+        "    'ffmpeg',\n",
+        "    '-i',\n",
+        "    f'{filepath}-slomo.mkv',\n",
+        "    f'{filepath}-slomo.mp4',\n",
+        "]\n",
+        "\n",
+        "subprocess.run(cmd1)\n",
+        "subprocess.run(cmd2)"
       ],
       "execution_count": null,
       "outputs": []
