--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -955,8 +955,8 @@
         "# Set zoomed = True if this cell is run\n",
         "zoomed = True\n",
         "\n",
-        "init_frame = 1#@param {type:\"number\"}\n",
-        "last_frame = 350#@param {type:\"number\"}\n",
+        "init_frame = 50#@param {type:\"number\"}\n",
+        "last_frame = 252#@param {type:\"number\"}\n",
         "\n",
         "for i in range(init_frame, last_frame): #\n",
         "    filename = f\"{i:04}.png\"\n",
@@ -971,8 +971,13 @@
         "        filename,\n",
         "        '--cuda'\n",
         "    ]\n",
+        "    print(f'Upscaling frame {i}')\n",
         "\n",
-        "    subprocess.run(cmd, cwd=f'{working_dir}/steps/')"
+        "    process = subprocess.Popen(cmd, cwd=f'{working_dir}/steps/')\n",
+        "    stdout, stderr = process.communicate()\n",
+        "    if stderr:\n",
+        "      raise RuntimeError(stderr)\n",
+        "      break"
       ],
       "execution_count": null,
       "outputs": []
@@ -1021,7 +1026,7 @@
         "    '-i',\n",
         "    image_path,\n",
         "    '-c:v',\n",
-        "    libx264,\n",
+        "    'libx264',\n",
         "    '-vf',\n",
         "    f'fps={fps}',\n",
         "    '-pix_fmt',\n",
@@ -1033,11 +1038,13 @@
         "    filepath\n",
         "]\n",
         "\n",
-        "subprocess.run(cmd)\n",
-        "\n",
-        "\n",
-        "# print(\"The video is now being compressed, wait...\")\n",
-        "print(\"The video is ready\")"
+        "process = subprocess.Popen(cmd, cwd=f'{working_dir}/steps/')\n",
+        "stdout, stderr = process.communicate()\n",
+        "if stderr:\n",
+        "    raise RuntimeError(stderr)\n",
+        "    break\n",
+        "else:\n",
+        "    print(\"The video is ready\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -1131,6 +1138,11 @@
         "    '--output',\n",
         "    f'{filepath}-slomo.mkv',\n",
         "]\n",
+        "process = subprocess.Popen(cmd1, cwd=f'/content')\n",
+        "stdout, stderr = process.communicate()\n",
+        "if stderr:\n",
+        "    raise RuntimeError(stderr)\n",
+        "    break\n",
         "\n",
         "cmd2 = [\n",
         "    'ffmpeg',\n",
@@ -1139,8 +1151,11 @@
         "    f'{filepath}-slomo.mp4',\n",
         "]\n",
         "\n",
-        "subprocess.run(cmd1)\n",
-        "subprocess.run(cmd2)"
+        "process = subprocess.Popen(cmd2)\n",
+        "stdout, stderr = process.communicate()\n",
+        "if stderr:\n",
+        "    raise RuntimeError(stderr)\n",
+        "    break\n"
       ],
       "execution_count": null,
       "outputs": []
