--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -1132,9 +1132,9 @@
         "    '--video',\n",
         "    filepath,\n",
         "    '--sf',\n",
-        "    SLOW_MOTION_FACTOR,\n",
+        "    str(SLOW_MOTION_FACTOR),\n",
         "    '--fps',\n",
-        "    TARGET_FPS,\n",
+        "    str(TARGET_FPS),\n",
         "    '--output',\n",
         "    f'{filepath}-slomo.mkv',\n",
         "]\n",
