--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -1140,9 +1140,8 @@
         "]\n",
         "process = subprocess.Popen(cmd1, cwd=f'/content')\n",
         "stdout, stderr = process.communicate()\n",
-        "if stderr:\n",
+        "if stderr is not None:\n",
         "    raise RuntimeError(stderr)\n",
-        "    break\n",
         "\n",
         "cmd2 = [\n",
         "    'ffmpeg',\n",
@@ -1153,9 +1152,8 @@
         "\n",
         "process = subprocess.Popen(cmd2)\n",
         "stdout, stderr = process.communicate()\n",
-        "if stderr:\n",
-        "    raise RuntimeError(stderr)\n",
-        "    break\n"
+        "if stderr is not None:\n",
+        "    raise RuntimeError(stderr)\n"
       ],
       "execution_count": null,
       "outputs": []
