--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1007,7 +1007,7 @@
         "# @title Create video\n",
         "\n",
         "init_frame = 25#@param {type:\"number\"} This is the frame where the video will start\n",
-        "last_frame = i#@param {type:\"number\"} You can change i to the number of the last frame you want to generate. It will raise an error if that number of frames does not exist.\n",
+        "last_frame = 176#@param {type:\"number\"} You can change i to the number of the last frame you want to generate. It will raise an error if that number of frames does not exist.\n",
         "fps = 12#@param {type:\"number\"}\n",
         "\n",
         "frames = []\n",
@@ -1055,17 +1055,6 @@
         "    raise RuntimeError(stderr)\n",
         "else:\n",
         "    print(\"The video is ready\")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cGONErDwzU8U"
-      },
-      "source": [
-        "print(stderr)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1156,9 +1145,12 @@
         "    '--fps',\n",
         "    str(TARGET_FPS),\n",
         "    '--output',\n",
-        "    f'{filepath}-slomo.mkv',\n",
+        "    f'{filepath[:-4]}-slomo.mkv',\n",
         "]\n",
-        "process = subprocess.Popen(cmd1, cwd=f'/content')\n",
+        "process = subprocess.Popen(cmd1, cwd=f'/content',\n",
+        "    stdout=subprocess.PIPE,\n",
+        "    stderr=subprocess.PIPE\n",
+        ")\n",
         "stdout, stderr = process.communicate()\n",
         "if stderr is not None:\n",
         "    raise RuntimeError(stderr)\n",
@@ -1166,13 +1158,24 @@
         "cmd2 = [\n",
         "    'ffmpeg',\n",
         "    '-i',\n",
-        "    f'{filepath}-slomo.mkv',\n",
-        "    f'{filepath}-slomo.mp4',\n",
+        "    f'{filepath[:-4]}-slomo.mkv',\n",
+        "    '-c:v',\n",
+        "    'libx264',\n",
+        "    '-pix_fmt',\n",
+        "    'yuv420p',\n",
+        "    '-crf',\n",
+        "    '17',\n",
+        "    '-preset',\n",
+        "    'veryslow',\n",
+        "    f'{filepath[:-4]}-slomo.mp4',\n",
         "]\n",
         "\n",
-        "process = subprocess.Popen(cmd2)\n",
+        "process = subprocess.Popen(cmd2,\n",
+        "    stdout=subprocess.PIPE,\n",
+        "    stderr=subprocess.PIPE\n",
+        ")\n",
         "stdout, stderr = process.communicate()\n",
-        "if stderr is not None:\n",
+        "if process.returncode != 0:\n",
         "    raise RuntimeError(stderr)\n"
       ],
       "execution_count": null,
