--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -509,21 +509,21 @@
       },
       "source": [
         "#@title Parameters\n",
-        "key_frames = True #@param {type:\"boolean\"}\n",
-        "text_prompts = \"10:(Apple: 1| Orange: 0), 20: (Apple: 0| Orange: 1| Peach: 1)\" #@param {type:\"string\"}\n",
+        "key_frames = False #@param {type:\"boolean\"}\n",
+        "text_prompts = \"by John Constable | Oil Painting\" #@param {type:\"string\"}\n",
         "width =  800#@param {type:\"number\"}\n",
         "height =  450#@param {type:\"number\"}\n",
         "model = \"vqgan_imagenet_f16_16384\" #@param [\"vqgan_imagenet_f16_16384\", \"vqgan_imagenet_f16_1024\", \"wikiart_1024\", \"wikiart_16384\", \"coco\", \"faceshq\", \"sflckr\"]\n",
-        "interval =  10#@param {type:\"number\"}\n",
-        "initial_image = \"\"#@param {type:\"string\"}\n",
+        "interval =  1#@param {type:\"number\"}\n",
+        "initial_image = \"init.png\"#@param {type:\"string\"}\n",
         "target_images = \"\"#@param {type:\"string\"}\n",
         "seed = 1#@param {type:\"number\"}\n",
-        "max_frames = 350#@param {type:\"number\"}\n",
-        "angle = \"0:(30), 50:(-30), 100:(30), 150:(-30), 200:(30), 250:(-30), 300:(30), 350:(-30)\"#@param {type:\"string\"}\n",
-        "zoom = \"0:(1.1)\"#@param {type:\"string\"}\n",
-        "translation_x = \"0:(0)\"#@param {type:\"string\"}\n",
-        "translation_y = \"0:(0)\"#@param {type:\"string\"}\n",
-        "iterations_per_frame = \"0:(10)\"#@param {type:\"string\"}\n",
+        "max_frames = 50#@param {type:\"number\"}\n",
+        "angle = \"0\"#@param {type:\"string\"}\n",
+        "zoom = \"1\"#@param {type:\"string\"}\n",
+        "translation_x = \"0\"#@param {type:\"string\"}\n",
+        "translation_y = \"0\"#@param {type:\"string\"}\n",
+        "iterations_per_frame = \"10\"#@param {type:\"string\"}\n",
         "save_all_iterations = False#@param {type:\"boolean\"}\n",
         "\n",
         "model_names={\n",
@@ -681,8 +681,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g7EDme5RYCrt",
-        "cellView": "form"
+        "id": "g7EDme5RYCrt"
       },
       "source": [
         "#@title Actually do the run...\n",
@@ -767,7 +766,9 @@
         "        )\n",
         "    try:\n",
         "        if i == 0 and initial_image != \"\":\n",
-        "            img_0 = cv2.imread(initial_image)\n",
+        "            img_temp = cv2.imread(initial_image)\n",
+        "            imageio.imwrite('inverted_temp.png', img_temp)\n",
+        "            img_0 = cv2.imread('inverted_temp.png')\n",
         "            z, *_ = model.encode(TF.to_tensor(img_0).to(device).unsqueeze(0) * 2 - 1)\n",
         "        elif i == 0 and not os.path.isfile(f'{working_dir}/steps/{i:04d}.png'):\n",
         "            one_hot = F.one_hot(\n",
