--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -509,21 +509,21 @@
       },
       "source": [
         "#@title Parameters\n",
-        "key_frames = True #@param {type:\"boolean\"}\n",
-        "text_prompts = \"10:(Apple: 1| Orange: 0), 20: (Apple: 0| Orange: 1| Peach: 1)\" #@param {type:\"string\"}\n",
-        "width =  800#@param {type:\"number\"}\n",
-        "height =  450#@param {type:\"number\"}\n",
+        "key_frames = False #@param {type:\"boolean\"}\n",
+        "text_prompts = \"Cityscape New York Skyline\" #@param {type:\"string\"}\n",
+        "width =  400#@param {type:\"number\"}\n",
+        "height =  250#@param {type:\"number\"}\n",
         "model = \"vqgan_imagenet_f16_16384\" #@param [\"vqgan_imagenet_f16_16384\", \"vqgan_imagenet_f16_1024\", \"wikiart_1024\", \"wikiart_16384\", \"coco\", \"faceshq\", \"sflckr\"]\n",
-        "interval =  10#@param {type:\"number\"}\n",
+        "interval =  1#@param {type:\"number\"}\n",
         "initial_image = \"\"#@param {type:\"string\"}\n",
         "target_images = \"\"#@param {type:\"string\"}\n",
         "seed = 1#@param {type:\"number\"}\n",
-        "max_frames = 350#@param {type:\"number\"}\n",
-        "angle = \"0:(0)\"#@param {type:\"string\"}\n",
-        "zoom = \"0:(1.1)\"#@param {type:\"string\"}\n",
-        "translation_x = \"0:(-4)\"#@param {type:\"string\"}\n",
-        "translation_y = \"0:(-6)\"#@param {type:\"string\"}\n",
-        "iterations_per_frame = \"0:(10)\"#@param {type:\"string\"}\n",
+        "max_frames = 50#@param {type:\"number\"}\n",
+        "angle = \"0\"#@param {type:\"string\"}\n",
+        "zoom = \"1\"#@param {type:\"string\"}\n",
+        "translation_x = \"0\"#@param {type:\"string\"}\n",
+        "translation_y = \"0\"#@param {type:\"string\"}\n",
+        "iterations_per_frame = \"10\"#@param {type:\"string\"}\n",
         "save_all_iterations = False#@param {type:\"boolean\"}\n",
         "\n",
         "model_names={\n",
@@ -681,8 +681,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g7EDme5RYCrt",
-        "cellView": "form"
+        "id": "g7EDme5RYCrt"
       },
       "source": [
         "#@title Actually do the run...\n",
@@ -926,6 +925,106 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Uu2ZpmlRW8o_"
+      },
+      "source": [
+        "3d inpainting from https://colab.research.google.com/github/mrm8488/shared_colab_notebooks/blob/master/3D_Photo_Inpainting_multiple_download.ipynb"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oDteoRf0QL40"
+      },
+      "source": [
+        "!pip3 install -q torch==1.4.0+cu100 torchvision==0.5.0+cu100 -f https://download.pytorch.org/whl/torch_stable.html\n",
+        "!pip3 install -q opencv-python==4.2.0.32\n",
+        "!pip3 install -q vispy==0.6.4\n",
+        "!pip3 install -q moviepy==1.0.2\n",
+        "!pip3 install -q transforms3d==0.3.1\n",
+        "!pip3 install -q networkx==2.3\n",
+        "!pip install -q PyDrive"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jKEwiBg4P0_S"
+      },
+      "source": [
+        "![ -e 3d-photo-inpainting-master ] && rm -r 3d-photo-inpainting-master\n",
+        "from os.path import exists\n",
+        "def download_from_google_drive(file_id, file_name):\n",
+        "  # download a file from the Google Drive link\n",
+        "  !rm -f ./cookie\n",
+        "  !curl -c ./cookie -s -L \"https://drive.google.com/uc?export=download&id={file_id}\" > /dev/null\n",
+        "  confirm_text = !awk '/download/ {print $NF}' ./cookie\n",
+        "  confirm_text = confirm_text[0]\n",
+        "  !curl -Lb ./cookie \"https://drive.google.com/uc?export=download&confirm={confirm_text}&id={file_id}\" -o {file_name}\n",
+        "  \n",
+        "photo_inpainting_model = '3d-photo-inpainting-master.zip'\n",
+        "if not exists(photo_inpainting_model):\n",
+        "  download_from_google_drive('1Jmiq1-hSIsHiq_GCcmiNXtrs_T62AY_z', photo_inpainting_model)\n",
+        "\n",
+        "!unzip 3d-photo-inpainting-master.zip\n",
+        "!rm 3d-photo-inpainting-master.zip\n",
+        "\n",
+        "# Disable PLY generation\n",
+        "!sed -i 's/save_ply: True/save_ply: False/' 3d-photo-inpainting-master/argument.yml\n",
+        "\n",
+        "# Switch off screen rendering\n",
+        "!sed -i 's/offscreen_rendering: True/offscreen_rendering: False/g' 3d-photo-inpainting-master/argument.yml"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y766VvS-UU-l"
+      },
+      "source": [
+        "Image.open('gdrive/MyDrive/vqgan/steps/0007.png').save('3d-photo-inpainting-master/image/cityscape.jpg')\n",
+        "!rm 3d-photo-inpainting-master/image/moon.jpg"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sg-aV5CMSedm"
+      },
+      "source": [
+        "!cd 3d-photo-inpainting-master/ && python main.py --config argument.yml"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lHvryFxRT_NA"
+      },
+      "source": [
+        "# @title See video in the browser\n",
+        "# @markdown This process may take a little longer. If you don't want to wait, download it by executing the next cell instead of using this cell.\n",
+        "mp4 = open('3d-photo-inpainting-master/video/cityscape_straight-line.mp4','rb').read()\n",
+        "data_url = \"data:video/mp4;base64,\" + b64encode(mp4).decode()\n",
+        "display.HTML(\"\"\"\n",
+        "<video width=400 controls>\n",
+        "      <source src=\"%s\" type=\"video/mp4\">\n",
+        "</video>\n",
+        "\"\"\" % data_url)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "YIsSFgtPw0Pc"
       },
       "source": [
@@ -1052,8 +1151,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "E8lvN6b0mb-b",
-        "cellView": "form"
+        "id": "E8lvN6b0mb-b"
       },
       "source": [
         "# @title See video in the browser\n",
